@@ -16,19 +16,16 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+
 package org.elasticsearch.common.settings;
 
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.component.AbstractComponent;
 import org.elasticsearch.common.regex.Regex;
 import org.elasticsearch.common.xcontent.ToXContent.Params;
 import org.elasticsearch.rest.RestRequest;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 
@@ -36,7 +33,7 @@ import java.util.Set;
  * A class that allows to filter settings objects by simple regular expression patterns or full settings keys.
  * It's used for response filtering on the rest layer to for instance filter out sensitive information like access keys.
  */
-public final class SettingsFilter extends AbstractComponent {
+public final class SettingsFilter {
     /**
      * Can be used to specify settings filter that will be used to filter out matching settings in toXContent method
      */
@@ -45,14 +42,13 @@ public final class SettingsFilter extends AbstractComponent {
     private final Set<String> patterns;
     private final String patternString;
 
-    public SettingsFilter(Settings settings, Collection<String> patterns) {
-        super(settings);
+    public SettingsFilter(Collection<String> patterns) {
         for (String pattern : patterns) {
             if (isValidPattern(pattern) == false) {
                 throw new IllegalArgumentException("invalid pattern: " + pattern);
             }
         }
-        this.patterns = Collections.unmodifiableSet(new HashSet<>(patterns));
+        this.patterns = Set.copyOf(patterns);
         patternString = Strings.collectionToDelimitedString(patterns, ",");
     }
 
@@ -105,13 +101,7 @@ public final class SettingsFilter extends AbstractComponent {
         }
         if (!simpleMatchPatternList.isEmpty()) {
             String[] simpleMatchPatterns = simpleMatchPatternList.toArray(new String[simpleMatchPatternList.size()]);
-            Iterator<String> iterator = builder.keys().iterator();
-            while (iterator.hasNext()) {
-                String key = iterator.next();
-                if (Regex.simpleMatch(simpleMatchPatterns, key)) {
-                    iterator.remove();
-                }
-            }
+            builder.keys().removeIf(key -> Regex.simpleMatch(simpleMatchPatterns, key));
         }
         return builder.build();
     }
