@@ -20,13 +20,10 @@
 package org.elasticsearch.bootstrap;
 
 import org.elasticsearch.test.ESTestCase;
-import org.junit.Before;
 
 import java.io.IOError;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -36,19 +33,12 @@ import static org.hamcrest.CoreMatchers.equalTo;
 
 public class ElasticsearchUncaughtExceptionHandlerTests extends ESTestCase {
 
-    private Map<Class<? extends Error>, Integer> expectedStatus;
-
-    @Before
-    public void setUp() throws Exception {
-        super.setUp();
-        Map<Class<? extends Error>, Integer> expectedStatus = new HashMap<>();
-        expectedStatus.put(InternalError.class, 128);
-        expectedStatus.put(OutOfMemoryError.class, 127);
-        expectedStatus.put(StackOverflowError.class, 126);
-        expectedStatus.put(UnknownError.class, 125);
-        expectedStatus.put(IOError.class, 124);
-        this.expectedStatus = Collections.unmodifiableMap(expectedStatus);
-    }
+    private static Map<Class<? extends Error>, Integer> EXPECTED_STATUS = Map.of(
+            InternalError.class, 128,
+            OutOfMemoryError.class, 127,
+            StackOverflowError.class, 126,
+            UnknownError.class, 125,
+            IOError.class, 124);
 
     public void testUncaughtError() throws InterruptedException {
         final Error error = randomFrom(
@@ -65,7 +55,7 @@ public class ElasticsearchUncaughtExceptionHandlerTests extends ESTestCase {
         final AtomicInteger observedStatus = new AtomicInteger();
         final AtomicReference<String> threadNameReference = new AtomicReference<>();
         final AtomicReference<Throwable> throwableReference = new AtomicReference<>();
-        thread.setUncaughtExceptionHandler(new ElasticsearchUncaughtExceptionHandler(() -> "testUncaughtError") {
+        thread.setUncaughtExceptionHandler(new ElasticsearchUncaughtExceptionHandler() {
 
             @Override
             void halt(int status) {
@@ -89,8 +79,8 @@ public class ElasticsearchUncaughtExceptionHandlerTests extends ESTestCase {
         thread.join();
         assertTrue(halt.get());
         final int status;
-        if (expectedStatus.containsKey(error.getClass())) {
-            status = expectedStatus.get(error.getClass());
+        if (EXPECTED_STATUS.containsKey(error.getClass())) {
+            status = EXPECTED_STATUS.get(error.getClass());
         } else {
             status = 1;
         }
@@ -106,7 +96,7 @@ public class ElasticsearchUncaughtExceptionHandlerTests extends ESTestCase {
         thread.setName(name);
         final AtomicReference<String> threadNameReference = new AtomicReference<>();
         final AtomicReference<Throwable> throwableReference = new AtomicReference<>();
-        thread.setUncaughtExceptionHandler(new ElasticsearchUncaughtExceptionHandler(() -> "testUncaughtException") {
+        thread.setUncaughtExceptionHandler(new ElasticsearchUncaughtExceptionHandler() {
             @Override
             void halt(int status) {
                 fail();
