@@ -10,21 +10,20 @@ import com.unboundid.ldap.sdk.LDAPInterface;
 import com.unboundid.ldap.sdk.SearchScope;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.xpack.core.security.authc.RealmConfig;
 import org.elasticsearch.xpack.core.security.authc.ldap.UserAttributeGroupsResolverSettings;
 import org.elasticsearch.xpack.security.authc.ldap.support.LdapSession.GroupsResolver;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
+import static org.elasticsearch.xpack.core.security.authc.ldap.support.SessionFactorySettings.IGNORE_REFERRAL_ERRORS_SETTING;
 import static org.elasticsearch.xpack.security.authc.ldap.support.LdapUtils.OBJECT_CLASS_PRESENCE_FILTER;
 import static org.elasticsearch.xpack.security.authc.ldap.support.LdapUtils.searchForEntry;
-import static org.elasticsearch.xpack.core.security.authc.ldap.support.SessionFactorySettings.IGNORE_REFERRAL_ERRORS_SETTING;
 
 /**
 * Resolves the groups of a user based on the value of a attribute of the user's ldap entry
@@ -34,8 +33,8 @@ class UserAttributeGroupsResolver implements GroupsResolver {
     private final String attribute;
     private final boolean ignoreReferralErrors;
 
-    UserAttributeGroupsResolver(Settings settings) {
-        this(UserAttributeGroupsResolverSettings.ATTRIBUTE.get(settings), IGNORE_REFERRAL_ERRORS_SETTING.get(settings));
+    UserAttributeGroupsResolver(RealmConfig realmConfig) {
+        this(realmConfig.getSetting(UserAttributeGroupsResolverSettings.ATTRIBUTE), realmConfig.getSetting(IGNORE_REFERRAL_ERRORS_SETTING));
     }
 
     private UserAttributeGroupsResolver(String attribute, boolean ignoreReferralErrors) {
@@ -47,16 +46,18 @@ class UserAttributeGroupsResolver implements GroupsResolver {
     public void resolve(LDAPInterface connection, String userDn, TimeValue timeout, Logger logger, Collection<Attribute> attributes,
                         ActionListener<List<String>> listener) {
         if (attributes != null) {
-            List<String> list = attributes.stream().filter((attr) -> attr.getName().equals(attribute))
-                    .flatMap(attr -> Arrays.stream(attr.getValues())).collect(Collectors.toList());
-            listener.onResponse(Collections.unmodifiableList(list));
+            final List<String> groups = attributes.stream()
+                    .filter((attr) -> attr.getName().equals(attribute))
+                    .flatMap(attr -> Arrays.stream(attr.getValues()))
+                    .collect(Collectors.toUnmodifiableList());
+            listener.onResponse(groups);
         } else {
             searchForEntry(connection, userDn, SearchScope.BASE, OBJECT_CLASS_PRESENCE_FILTER, Math.toIntExact(timeout.seconds()),
                     ignoreReferralErrors, ActionListener.wrap((entry) -> {
                         if (entry == null || entry.hasAttribute(attribute) == false) {
-                            listener.onResponse(Collections.emptyList());
+                            listener.onResponse(List.of());
                         } else {
-                            listener.onResponse(Collections.unmodifiableList(Arrays.asList(entry.getAttributeValues(attribute))));
+                            listener.onResponse(List.of(entry.getAttributeValues(attribute)));
                         }
                     }, listener::onFailure), attribute);
         }
