@@ -5,23 +5,23 @@
  */
 package org.elasticsearch.xpack.security.authc.ldap.support;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Map;
-import java.util.Objects;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-
 import com.unboundid.ldap.sdk.Attribute;
 import com.unboundid.ldap.sdk.LDAPInterface;
 import com.unboundid.ldap.sdk.SearchResultEntry;
 import com.unboundid.ldap.sdk.SearchScope;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.xpack.core.security.authc.RealmConfig;
 import org.elasticsearch.xpack.core.security.authc.ldap.support.LdapMetaDataResolverSettings;
+
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import static org.elasticsearch.xpack.security.authc.ldap.support.LdapUtils.OBJECT_CLASS_PRESENCE_FILTER;
 import static org.elasticsearch.xpack.security.authc.ldap.support.LdapUtils.searchForEntry;
@@ -31,8 +31,8 @@ public class LdapMetaDataResolver {
     private final String[] attributeNames;
     private final boolean ignoreReferralErrors;
 
-    public LdapMetaDataResolver(Settings settings, boolean ignoreReferralErrors) {
-        this(LdapMetaDataResolverSettings.ADDITIONAL_META_DATA_SETTING.get(settings), ignoreReferralErrors);
+    public LdapMetaDataResolver(RealmConfig realmConfig, boolean ignoreReferralErrors) {
+        this(realmConfig.getSetting(LdapMetaDataResolverSettings.ADDITIONAL_META_DATA_SETTING), ignoreReferralErrors);
     }
 
     LdapMetaDataResolver(Collection<String> attributeNames, boolean ignoreReferralErrors) {
@@ -48,7 +48,7 @@ public class LdapMetaDataResolver {
                         Collection<Attribute> attributes,
                         ActionListener<Map<String, Object>> listener) {
         if (this.attributeNames.length == 0) {
-            listener.onResponse(Collections.emptyMap());
+            listener.onResponse(Map.of());
         } else if (attributes != null) {
             listener.onResponse(toMap(name -> findAttribute(attributes, name)));
         } else {
@@ -56,7 +56,7 @@ public class LdapMetaDataResolver {
                     Math.toIntExact(timeout.seconds()), ignoreReferralErrors,
                     ActionListener.wrap((SearchResultEntry entry) -> {
                         if (entry == null) {
-                            listener.onResponse(Collections.emptyMap());
+                            listener.onResponse(Map.of());
                         } else {
                             listener.onResponse(toMap(entry::getAttribute));
                         }
@@ -71,16 +71,14 @@ public class LdapMetaDataResolver {
     }
 
     private Map<String, Object> toMap(Function<String, Attribute> attributes) {
-        return Collections.unmodifiableMap(
-                Arrays.stream(this.attributeNames).map(attributes).filter(Objects::nonNull)
-                        .collect(Collectors.toMap(
+        return Arrays.stream(this.attributeNames).map(attributes).filter(Objects::nonNull)
+                        .collect(Collectors.toUnmodifiableMap(
                                 attr -> attr.getName(),
                                 attr -> {
                                     final String[] values = attr.getValues();
-                                    return values.length == 1 ? values[0] : Arrays.asList(values);
+                                    return values.length == 1 ? values[0] : List.of(values);
                                 })
-                        )
-        );
+                        );
     }
 
 }
